<resources>
    <string name="app_name" translatable="false">Theme App</string>

    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="languages">Languages</string>
    <string name="themes">Themes</string>
    <string name="system_default">System Default</string>
    <string name="continue_">Continue</string>
    <string name="light">Light</string>
    <string name="night">Night</string>
    <string name="confirm">Confirm</string>
</resources>