<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:text="@string/themes"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_13sdp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/themeGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <RadioButton
            android:id="@+id/btnSystemDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/system_default" />

        <RadioButton
            android:id="@+id/btnLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/light" />

        <RadioButton
            android:id="@+id/btnNight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_color"
            android:text="@string/night" />
    </RadioGroup>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:text="@string/confirm"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginVertical="@dimen/_20sdp"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/themeGroup"/>
</androidx.constraintlayout.widget.ConstraintLayout>